quorum/test/tests/templating/Fail/B_11.quorum
class B is a A<integer>

end